# pico-projects

./: .gitignore  README.md  bf.sh
bus-scan/: CMakeLists.txt  main.c
button/: CMakeLists.txt  main.c
display/: CMakeLists.txt  bootselbtn.h  compute.h  compute_face.h  flowering.c  hello.c  hello.h  main.c  pixel-mapper.py  ssd1306.c  ssd1306.h
event-loop/: CMakeLists.txt  app_state.c  app_state.h  bootselbtn.c  btnstate.c  btnstate.h  event_queue.c  event_queue.h  main.c  memory_util.c  memory_util.h  queue.c  stack_queue.c  stack_queue.h
moisture-sensor/: CMakeLists.txt  main.c  moisture_sensor.c  moisture_sensor.h
multicore-watchdog/: CMakeLists.txt  main.c  (+1 more)
plantingtosh/: CMakeLists.txt  README.md  app_macros.h  app_queues.c  app_queues.h  background_tasks.c  background_tasks.h  board_id.c  board_id.h  btnstate.c  btnstate.h  events.h  flowering.c  main.c  memory_util.c  moisture_sensor.h  plant_stats.c  plant_stats.h  process_log.py  queue.c  queue.h  screen_manager.c  screen_manager.h  screen_size.h  server.py  ssd1306.c  ssd1306.h  stack_queue.c  stack_queue.h  tasks_watchdog.c  tasks_watchdog.h  tcp_client.c  tcp_client.h  utils.c  utils.h
plantingtosh/python/: filereader.py  logreader.py  plantinfos.py  plantstats.py  process_log.py  server.py
plantingtosh/python/webserver/: db.sqlite3
plantingtosh/python/webserver/webserver/: settings.py  urls.py  views.py
plantingtosh/python/webserver/webserver/templates/: dashboard.html
plantingtosh/screens/: boot_screens.c  boot_screens.h  plant_stats_screens.c  plant_stats_screens.h  screen_ids.h  settings_screens.c  settings_screens.h  sleep_screens.C  sleep_screens.h
(+22 files in other folders)
